# ClawInbox

./: .gitattributes  .gitignore  .gitleaks.toml  LICENSE  Plan.md  README.md  pyproject.toml
.github/workflows/: secret-scan.yml  tests.yml
docs/: engineering-guide.md  live-imap-smoke-test.md  project-state.md  rollout-iteration-1.md  rollout-iteration-2.md  rollout-iteration-3.md  rollout-iteration-4.md  rollout-iteration-5.md  rollout-iteration-6.md  rollout-procedure.md  wiki.md
docs/skills/clawinbox-email-mcp/: SKILL.md
docs/skills/clawinbox-email-mcp-hosted/: SKILL.md
docs/skills/clawinbox-installation/: SKILL.md
scripts/: dev_run_http.sh  dev_run_stdio.sh  update_test_table.py
src/email_mcp/: access_log.py  cli.py  config.py  imap_sync.py  logging.py  main.py  normalize.py  registry.py  settings.py  store.py
src/email_mcp/auth/: auth_bearer.py  auth_none.py  auth_oauth.py
src/email_mcp/db/: cleanup.py  engine.py  helpers.py  jobs.py  migrate.py  models.py  queries.py
src/email_mcp/mcp_tools/: __init__.py  label_tools.py  maintenance_tools.py  rules_tools.py  search_tools.py  status_tools.py
src/email_mcp/rules/: rules_engine.py  rules_models.py
src/email_mcp/vector/: __init__.py  chroma_store.py  embedder.py  (+1 more)
tests/: test_cleanup.py  test_cli.py  test_db.py  test_fts.py  test_hybrid.py  test_imap_errors.py  test_integration_auth.py  test_integration_multiaccount.py  test_mailboxes.py  test_normalize.py  test_normalize_property.py  test_purge.py  test_registry.py  test_rules.py  test_settings_dirs.py  test_status_tools.py  test_store.py
(+10 files in other folders)
